SelectionModelの修正。